[gd_scene load_steps=6 format=3 uid="uid://8jiy7qahyswn"]

[ext_resource type="Script" uid="uid://bbi716xp6mnoi" path="res://ui/inventory.gd" id="1_r0227"]
[ext_resource type="PackedScene" uid="uid://lb0qpqmdeb1m" path="res://ui/inventory_slot.tscn" id="2_70ao8"]
[ext_resource type="Resource" uid="uid://j7pj6dtrxku4" path="res://item/weapons/biscuit_416.tres" id="3_olbmd"]
[ext_resource type="Resource" uid="uid://dpwsew1s4juke" path="res://item/weapons/bisgun.tres" id="4_4smma"]
[ext_resource type="Resource" uid="uid://c2gm7rxntd6co" path="res://item/weapons/smb.tres" id="5_wurve"]

[node name="Inventory" type="Node2D"]
z_index = 1
script = ExtResource("1_r0227")
metadata/_custom_type_script = "uid://bbi716xp6mnoi"

[node name="InventorySlot1" parent="." instance=ExtResource("2_70ao8")]
offset_left = -95.0
offset_top = -20.0
offset_right = -55.0
offset_bottom = 20.0
item = ExtResource("3_olbmd")
metadata/_edit_use_anchors_ = true

[node name="InventorySlot2" parent="." instance=ExtResource("2_70ao8")]
offset_left = -45.0
offset_top = -20.0
offset_right = -5.0
offset_bottom = 20.0
slot_number = 1
item = ExtResource("4_4smma")
metadata/_edit_use_anchors_ = true

[node name="InventorySlot3" parent="." instance=ExtResource("2_70ao8")]
offset_left = 5.0
offset_top = -20.0
offset_right = 45.0
offset_bottom = 20.0
slot_number = 2
item = ExtResource("5_wurve")
metadata/_edit_use_anchors_ = true

[node name="InventorySlot4" parent="." instance=ExtResource("2_70ao8")]
offset_left = 55.0
offset_top = -20.0
offset_right = 95.0
offset_bottom = 20.0
slot_number = 3
metadata/_edit_use_anchors_ = true
